initial working version for panama implementation